# fraudshield

./: .env  .gitignore  fraudshield.py  main.py  pyproject.toml
core/: __init__.py  methods.py  utils.py
extension/: background.js
